# pyspark-template

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: people-example.csv
pyspark_template/: jsonInferSchema.py  sparksession.py  tableau.py  tableau_v2.py
tests/: conftest.py  test_compare_dataframes.py  test_drools.py  test_pyspark-template.py  test_transformations.py
